implement server signer

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,16 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Zen+Antique&display=swap" rel="stylesheet">
+
+    <meta property="og:url" content="https://industrial-revolution-moments.web.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Flow Challenge NFT" />
+    <meta property="og:description" content="This NFT represents the participation on the Flow Challenge, an event of the Flow Japan community held from December 30, 2021 to January 31, 2022." />
+    <meta property="og:site_name" content="Flow Challenge NFT" />
+    <meta property="og:image" content="https://img.rarible.com/prod/image/upload/t_image_preview/prod-itemImages/FLOW-A.01ab36aaf654a13e.RaribleNFT:119834/d211034d" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
